metodods da classe integer